Nginx_Ingress/templates/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deploy
    labels:
        app: nginx
spec:
    selector:
        matchLabels:
            app: nginx
    replicas: 1
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
            - name: nginx
              image: nginx
              ports:
                - containerPort: 80
