Nginx_Ingress/templates/deployments2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: apache-deploy
    labels:
        app: apache
spec:
    selector:
        matchLabels:
            app: apache
    replicas: 1
    template:
        metadata:
            labels:
                app: apache
        spec:
            containers:
            - name: apache
              image: httpd:2.4
              ports:
                - containerPort: 81
