Nginx_Ingress/templates/service2.yml
apiVersion: v1
kind: Service
metadata:
    name: apacheservice
    labels:
        app: apache
spec:
    selector:
        app: apache
    ports:
    - port: 80
      protocol: TCP
      name: http
