Nginx_Ingress/templates/svc.yml
apiVersion: v1
kind: Service
metadata:
    name: nginx-svc
    annotations:
        service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    labels:
        app: nginx
spec:
    type: LoadBalancer
    selector:
        app: nginx
    ports:
    - port: 80
      name: http
